--- a/engine/presets/autopilot.yaml
+++ b/engine/presets/autopilot.yaml
@@ -2,10 +2,10 @@ name: autopilot
 
 paths:
   # Use your D: storage root artifacts written by weekly-train
-  features: D:\\EngineData\\datasets\\features_daily_1D.parquet
-  meta_model: D:\\EngineData\\models\\meta_hgb.pkl
-  oof: D:\\EngineData\\datasets\\oof_specialists.parquet
-  calibrators_pkl: D:\\EngineData\\models\\spec_calibrators.pkl
+  features: C:\\EngineData\\datasets\\features_daily_1D.parquet
+  meta_model: C:\\EngineData\\models\\meta_hgb.pkl
+  oof: C:\\EngineData\\datasets\\oof_specialists.parquet
+  calibrators_pkl: C:\\EngineData\\models\\spec_calibrators.pkl
 
 provider:
   polygon_plan: starter
