--- a/engine/presets/swing_conservative.yaml
+++ b/engine/presets/swing_conservative.yaml
@@ -1,10 +1,10 @@
 name: swing_conservative
 
 paths:
-  features: D:\\EngineData\\datasets\\features_daily_1D.parquet
-  meta_model: D:\\EngineData\\models\\meta_hgb.pkl
-  oof: D:\\EngineData\\datasets\\oof_specialists.parquet
-  calibrators_pkl: D:\\EngineData\\models\\spec_calibrators.pkl
+  features: C:\\EngineData\\datasets\\features_daily_1D.parquet
+  meta_model: C:\\EngineData\\models\\meta_hgb.pkl
+  oof: C:\\EngineData\\datasets\\oof_specialists.parquet
+  calibrators_pkl: C:\\EngineData\\models\\spec_calibrators.pkl
 
 # Provider capabilities
 provider:
